--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
@@ -18,6 +21,9 @@
     "gulp-uglify": "^3.0.0"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "babel-preset-es2015": "^6.24.1",
+    "jquery": "^3.2.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
