--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --hot --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "browserify": "^14.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "gulp-webpack": "^1.5.0",
+    "path": "^0.12.7",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3",
+    "webpack-stream": "^4.0.0"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
+    "gulp-browserify": "^0.5.1",
     "jquery": "^3.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
